fix: Pong2.java with Java version specific options